<resources>

    <!--加载弹窗-->
    <string name="lndonesia_blend_title">*请完整阅读本政策 </string>
    <string name="lndonesia_blend_button">确认</string>
    <string name="lndonesia_blend_privileges">请选中此框以同意该政策！</string>
    <string name="please_wait">""</string>

    <string name="camera_back_text">Kembali ke</string>
    <string name="tips">提示</string>
    <string name="determine">确定</string>
    <string name="show_download_on_google_player"></string>
    <string name="logcat_verification_failure">活体抛出失败!</string>


    <!--上传工作照 -->
    <string name="work_proof">工作证明</string>
    <string name="select_one_of_the_following_options_to_upload">选择以下选项之一进行上传:</string>
    <string name="lndonesia_blend_list">1. 工资单 \n2. 工作证 \n3. 驾驶执照 (摩托车 / 汽车) \n4. 工作场所照片</string>
    <string name="lndonesia_blend_return">返回</string>
    <string name="next_page">下一页</string>
    <string name="submission">提交</string>


    <!--上传身份证 -->
    <string name="identity_certificate">身份证明</string>

    <!--活体-->
    <string name="face_recognition_scanning">人脸识别扫描</string>
    <string name="right_cell_phone">正对手机</string>
    <string name="get_enough_light">光线充足</string>
    <string name="slow_down">放慢动作</string>
    <string name="start_living">开始活体</string>
    <string name="current_user_data_exception">当前用户数据异常</string>

    <string name="please_complete_the_information">请完善资料!</string>
    <string name="lndonesia_blend_see">查看</string>
    <string name="lndonesia_blend_resubmission">重新提交</string>

    <string name="upload_id_card_succeeded">上传身份证成功</string>
    <string name="failed_to_upload_id_card">上传身份证失败</string>
    <string name="photos_uploaded_successfully">照片已经成功上传</string>
    <string name="photo_upload_failed">照片上传失败</string>

    <!--申请贷款成功-->
    <string name="submit_successfully">提交成功！</string>
    <string name="loan_application_submission">贷款申请提交</string>
    <string name="pending_approval">待审批</string>
    <string name="lndonesia_blend_loan">放款</string>

    <string name="uploading">你的信息正在上传中,大概需要20s,感谢您的耐心等待</string>
    <string name="loading">正在快速加载，谢谢您的耐心配合</string>

    <string name="warm_reminder">温馨提醒</string>
    <string name="please_go_to_the">请到系统权限设置中允许需要的权限后使用该应用</string>
    <string name="content">我们需要您的许可才能批准您提供的联系人、相机和移动设备信息。更好的了解您的身份并确保用户满足其信用需求。我们致力于加密数据并确保信息安全</string>

    <string name="cancel">取消</string>
</resources>
