<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchAndMatch"
    tools:context="com.example.lndonesiablend.activity.submission.FaceDistinguishActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/MatchAndWrap">

        <LinearLayout
            style="@style/MatchAndWrap"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/picture_upload_top" />

            <TextView
                style="@style/WrapAndWrap"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/dp_21"
                android:text="@string/face_recognition_scanning"
                android:textColor="@color/colorSecurityAuthLivingThingTitle"
                android:textSize="@dimen/sp_16" />

            <ImageView
                style="@style/WrapAndWrap"
                android:layout_marginTop="@dimen/dp_11"
                android:src="@mipmap/submission_loan" />

            <ImageView
                style="@style/WrapAndWrap"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_70"
                android:layout_marginRight="@dimen/dp_10"
                android:scaleType="fitXY"
                android:src="@mipmap/submission_loan_demo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_5">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/right_cell_phone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/get_enough_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.571"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slow_down"
                    android:layout_marginRight="@dimen/dp_8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView"
                    app:layout_constraintHorizontal_bias="0.452"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/submission_loan_submit"
                android:layout_width="@dimen/dp_333"
                android:layout_height="@dimen/dp_51"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@drawable/picture_upload_btn_bg_two"
                android:text="@string/start_living"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
